WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247982
REGRESSION (
251289@main
): [ Ventura ] fast/images/animated-heics-draw.html is a consistent timeout
https://bugs.webkit.org/show_bug.cgi?id=247982
Summary
REGRESSION (251289@main): [ Ventura ] fast/images/animated-heics-draw.html is...
Karl Rackler
Reported
2022-11-16 08:24:38 PST
Description: fast/images/animated-heics-draw.html The first failure I saw on the dashboard was on 11/4/2022 at
256337@main
. This issue can be bisected to
251289@main
using the command: run-webkit-tests --debug --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 --iterations 50 -f --no-retry fast/images/animated-heics-draw.html Result: Regressions: Unexpected timeouts (1) fast/images/animated-heics-draw.html [ Timeout ] History:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fimages%2Fanimated-heics-draw.html
Diff: --- /Volumes/Data/worker/Apple-Ventura-Release-WK2-Tests/build/layout-test-results/fast/images/animated-heics-draw-expected.txt +++ /Volumes/Data/worker/Apple-Ventura-Release-WK2-Tests/build/layout-test-results/fast/images/animated-heics-draw-actual.txt @@ -1,14 +1,8 @@ +FAIL: Timed out waiting for notifyDone to be called + Verify HEICS image can animate. On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -Image was loaded successfully. -Image frame: 0 was displayed. -Image frame: 1 was displayed. -Image frame: 2 was displayed. -The HEICS Image was loaded and three frames of it were displayed successfully. -PASS successfullyParsed is true -TEST COMPLETE -
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-16 08:25:17 PST
<
rdar://problem/102421055
>
Karl Rackler
Comment 2
2022-11-16 08:33:28 PST
I have marked this test as a consistent timeout while this issue is investigated.
Karl Rackler
Comment 3
2022-11-16 08:41:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6554
EWS
Comment 4
2022-11-16 08:45:31 PST
Test gardening commit
256735@main
(9d37767bbcc9): <
https://commits.webkit.org/256735@main
> Reviewed commits have been landed. Closing PR #6554 and removing active labels.
Per Arne Vollan
Comment 5
2022-11-16 11:15:57 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6558
EWS
Comment 6
2022-11-16 12:40:29 PST
Test gardening commit
256748@main
(89a1de42b347): <
https://commits.webkit.org/256748@main
> Reviewed commits have been landed. Closing PR #6559 and removing active labels.
EWS
Comment 7
2022-11-17 15:16:02 PST
Committed
256803@main
(cb95bbf8fb0f): <
https://commits.webkit.org/256803@main
> Reviewed commits have been landed. Closing PR #6558 and removing active labels.
Karl Rackler
Comment 8
2022-11-29 08:27:47 PST
After landing
256803@main
the test is still a consistent timeout on Ventura.
Karl Rackler
Comment 9
2022-11-30 06:36:06 PST
Current history shows test consistently passing.
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.ServiceWorkers.SuspendServiceWorkerProcessBasedOnClientProcessesWithoutSeparateServiceWorkerProcess
Karl Rackler
Comment 10
2022-12-05 06:07:26 PST
Re-opening. This was mistakenly closed, with the issue persisting due to a mixup on the test spot check. <
rdar://102979844
>
Karl Rackler
Comment 11
2022-12-05 06:08:19 PST
See
comment 10
Karl Rackler
Comment 12
2022-12-05 06:26:08 PST
Revert
256803@main
that caused the test to flaky crash.
EWS
Comment 13
2022-12-05 06:28:04 PST
Committed
257368@main
(bf51ac10e9b1): <
https://commits.webkit.org/257368@main
> Reviewed commits have been landed. Closing PR #7146 and removing active labels.
EWS
Comment 14
2022-12-05 06:37:53 PST
Test gardening commit
257369@main
(a147a604e46d): <
https://commits.webkit.org/257369@main
> Reviewed commits have been landed. Closing PR #7147 and removing active labels.
Karl Rackler
Comment 15
2022-12-05 06:46:14 PST
This flaky crash can be bisected to
256803@main
using the command: run-webkit-tests --debug --iterations 2000 --debug-rwt-logging --no-retry --force --no-build -f fast/images/animated-heics-verify.html The above can also reproduce the consistent timeout.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug