REGRESSION (251289@main): [ Ventura ] fast/images/animated-heics-draw.html is a consistent timeout https://bugs.webkit.org/show_bug.cgi?id=247982 rdar://102421055

Reviewed by Brent Fulgham.

Also create the required sandbox extension for WebKitTestRunner.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess):

Canonical link: https://commits.webkit.org/256803@main